<resources>
    <string name="app_name">Examen Bimestral</string>
    <string name="str_crear">Crear</string>
    <string name="str_listar">Listar</string>
    <string name="str_guardar">Guardar</string>
    <string name="str_nombre">Nombre</string>
    <string name="str_descripcion">Descripción</string>
    <string name="str_nacionalidad">Nacionalidad</string>
    <string name="str_numero_personas">Número de Personas</string>
    <string name="str_picante">Picante</string>
    <string name="str_confirmar">Confirmar</string>
    <string name="str_cancelar">Cancelar</string>
    <string name="str_ingredientes">Ingredientes</string>
    <string name="str_nuevo">Nuevo</string>
    <string name="str_crear_comida">Crear Comida</string>
    <string name="str_compartir_correo">Compartir por correo</string>
    <string name="str_editar">Editar</string>
    <string name="str_eliminar">Eliminar</string>
    <string name="str_comida">Comida</string>
    <string name="str_cantidad">Cantidad</string>
    <string name="str_opcional">Opcional</string>
    <string name="str_tipo">Tipo</string>
    <string name="str_necesita_refrigeracion">Necesita Refrigeración</string>
    <string name="str_si">Si</string>
    <string name="str_crear_ingrediente">Crear Ingrediente</string>
    <string name="str_desea_eliminar_comida">¿Desea eliminar esta comida?</string>
</resources>
