<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="98dp">


    <TextView
        android:id="@+id/lbl_nombre_lista_ingrediente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/str_nombre"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/lbl_cantidad_lista_ingrediente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorLabelOrange"
        android:text="@string/str_cantidad"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/lbl_descripcion_lista_ingrediente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorLabelOrangeLight"
        android:text="@string/str_descripcion"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="65dp" />

    <TextView
        android:id="@+id/lbl_opcional_lista_ingrediente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorLabelOrange"
        android:text="@string/str_opcional"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/lbl_tipo_lista_ingrediente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorLabelOrangeLight"
        android:text="@string/str_tipo"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="65dp" />

    <TextView
        android:id="@+id/lbl_necesita_refrigeracion_lista_ingrediente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorLabelOrange"
        android:text="@string/str_necesita_refrigeracion"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="40dp" />

</LinearLayout>