<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearComidaActivity">

    <TextView
        android:id="@+id/lbl_nombre_comida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/str_nombre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <TextView
        android:id="@+id/lbl_descripcion_comida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/str_descripcion"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lbl_nombre_comida"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="@+id/lbl_nombre_comida"
        app:layout_constraintTop_toBottomOf="@+id/lbl_nombre_comida" />

    <TextView
        android:id="@+id/lbl_nacionalidad_comida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/str_nacionalidad"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lbl_descripcion_comida"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/lbl_descripcion_comida"
        app:layout_constraintTop_toBottomOf="@+id/lbl_descripcion_comida" />

    <TextView
        android:id="@+id/lbl_numero_personas_comida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/str_numero_personas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lbl_nacionalidad_comida"
        app:layout_constraintTop_toBottomOf="@+id/lbl_nacionalidad_comida" />

    <TextView
        android:id="@+id/lbl_picante_comida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="104dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="24dp"
        android:text="@string/str_picante"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lbl_numero_personas_comida"
        app:layout_constraintStart_toStartOf="@+id/lbl_numero_personas_comida"
        app:layout_constraintTop_toBottomOf="@+id/lbl_numero_personas_comida" />

    <Button
        android:id="@+id/btn_guardar_comida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:text="@string/str_guardar"
        app:layout_constraintEnd_toEndOf="@+id/editText2"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/btn_cancelar_comida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:text="@string/str_cancelar"
        app:layout_constraintEnd_toEndOf="@+id/lbl_picante_comida"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/lbl_picante_comida"
        app:layout_constraintTop_toBottomOf="@+id/lbl_picante_comida" />

    <EditText
        android:id="@+id/txt_nombre_comida"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/str_nombre"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_nombre_comida"
        app:layout_constraintStart_toEndOf="@+id/lbl_nombre_comida"
        app:layout_constraintTop_toTopOf="@+id/lbl_nombre_comida" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/str_picante"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_picante_comida"
        app:layout_constraintStart_toEndOf="@+id/lbl_picante_comida"
        app:layout_constraintTop_toTopOf="@+id/lbl_picante_comida"
        app:layout_constraintVertical_bias="0.652" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/str_nacionalidad"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_nacionalidad_comida"
        app:layout_constraintStart_toEndOf="@+id/lbl_nacionalidad_comida"
        app:layout_constraintTop_toTopOf="@+id/lbl_nacionalidad_comida"
        app:layout_constraintVertical_bias="0.652" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/str_numero_personas"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_numero_personas_comida"
        app:layout_constraintStart_toEndOf="@+id/lbl_numero_personas_comida"
        app:layout_constraintTop_toTopOf="@+id/lbl_numero_personas_comida"
        app:layout_constraintVertical_bias="0.652" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/str_descripcion"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_descripcion_comida"
        app:layout_constraintStart_toEndOf="@+id/lbl_descripcion_comida"
        app:layout_constraintTop_toTopOf="@+id/lbl_descripcion_comida"
        app:layout_constraintVertical_bias="0.695" />

</android.support.constraint.ConstraintLayout>